# dddlib

./: .gitignore  CHANGELOG.md  LICENSE.md  README.ja.md  README.md  REPORT.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
tests/: conftest.py
tests/dddlib/common/errors/: test_ddd_error.py
tests/dddlib/common/messages/: test_ddd_message.py
tests/dddlib/domain/base/: test_frozen_base.py  test_id_base.py  test_repository.py
tests/dddlib/domain/entity/: test_entity.py
tests/dddlib/domain/utils/: test_uuid_identifier.py
tests/dddlib/domain/value_object/: test_value_object.py
