###############################################################################
# uv workspace 設定
###############################################################################
[project]
name = "dddlib-workspace"
version = "1.0.0"
description = "ドメイン駆動開発のモジュール開発ワークスペース"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dddlib",
]

[project.optional-dependencies]
cli = [
    "dddlib_cli>=1.0.0",
]
all = [
    "dddlib_cli>=1.0.0",
]

[tool.uv.workspace]
members = [
    "packages/dddlib",
    "packages/dddlib_cli",
]

[tool.uv.sources]
dddlib = { workspace = true }
dddlib-cli = { workspace = true }

###############################################################################
# 開発用依存関係
###############################################################################
[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.10",
]


###############################################################################
# Pyright 設定
###############################################################################
[tool.pyright]
include = [
    "packages/dddlib/src",
    "packages/dddlib_cli/src",
    "tests",
]

exclude = [
    # Pyright の既定除外
    "**/node_modules",
    "**/__pycache__",
    "**/.*",

    # Python / build / cache 系
    "**/venv",
    "**/.venv",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.tox",
    "**/.nox",
    "**/.pytype",
    "**/__pypackages__",

    # 生成物
    "**/build",
    "**/dist",
    "**/_build",
    "**/buck-out",
]

extraPaths = [
    "packages/dddlib/src",
    "packages/dddlib_cli/src",
]

pythonVersion = "3.14"
pythonPlatform = "All"

typeCheckingMode = "strict"

useLibraryCodeForTypes = true

###############################################################################
# 型推論の厳格化
###############################################################################
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true
enableReachabilityAnalysis = true
disableBytesTypePromotions = true

###############################################################################
# import / stub
###############################################################################
reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingTypeStubs = "warning"
reportImportCycles = "warning"

###############################################################################
# 基本的な型エラー
###############################################################################
reportGeneralTypeIssues = "error"
reportArgumentType = "error"
reportAssignmentType = "error"
reportAttributeAccessIssue = "error"
reportCallIssue = "error"
reportIndexIssue = "error"
reportOperatorIssue = "error"
reportReturnType = "error"
reportOptionalMemberAccess = "error"
reportOptionalSubscript = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"

###############################################################################
# Any / Unknown 系
###############################################################################
reportAny = "warning"
reportExplicitAny = "warning"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"

###############################################################################
# 関数 / クラス / 継承
###############################################################################
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportUninitializedInstanceVariable = "warning"
reportImplicitOverride = "warning"
reportMissingSuperCall = "warning"
reportAbstractUsage = "error"
reportSelfClsParameterName = "error"

###############################################################################
# cast / overload / type ignore
###############################################################################
reportInvalidCast = "error"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportAssertAlwaysTrue = "warning"
reportInconsistentOverload = "error"
reportOverlappingOverload = "error"
reportNoOverloadImplementation = "error"
reportIgnoreCommentWithoutRule = "warning"

###############################################################################
# 到達不能 / 未使用 / 品質系
###############################################################################
reportUnreachable = "warning"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportWildcardImportFromLibrary = "error"
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportDeprecated = "warning"


###############################################################################
# Ruff 設定
###############################################################################
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 79
indent-width = 4
target-version = "py314"

###############################################################################
# Ruff Linter 設定
###############################################################################
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",
    "D400",
    "D403",
    "D415",
    "D106",
    "D203",
    "D213",
    "ERA001",
    "RET504",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",
    "S101",
    "S105",
    "SLF001",
    "INP001",
]
"packages/**/__init__.py" = ["F401", "D104"]


###############################################################################
# Ruff Formatter 設定
###############################################################################
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

###############################################################################
# pytest 設定
###############################################################################
[tool.pytest.ini_options]
pythonpath = [
    "packages/dddlib/src",
    "packages/dddlib_cli/src",
]
addopts = "-v --cov=packages/dddlib/src/dddlib --cov-report=term-missing --cov-report=html"
python_files = ["test_*.py"]
testpaths = ["tests"]
markers = [
    "reg: リグレッションテスト",
    "base: 基底クラス、抽象クラスのテスト",
    "v1_0_0: v1.0.0 で追加されたテスト",
]                                                             

###############################################################################
# MyPy 設定
###############################################################################
[tool.mypy]
explicit_package_bases = true
files = [
    "packages/dddlib/src",
    "packages/dddlib_cli/src",
]
mypy_path = [
    "packages/dddlib/src",
    "packages/dddlib_cli/src",
]
python_version = "3.14"
strict = true
